feat: add floating header on article page
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.1.0",
     "date-fns": "^2.29.2",
+    "framer-motion": "^7.10.2",
     "gray-matter": "^4.0.3",
     "mdx-prism": "^0.3.4",
     "next": "latest",
