--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,8 @@
     "import/newline-after-import": "warn",
     "import/no-duplicates": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
-    "no-console": "warn"
+    "@typescript-eslint/no-non-null-assertion": "off"
+
+    // "no-console": "warn"
   }
 }
