--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.1.1",
+    "ariakit": "^2.0.0-next.41",
     "clsx": "^1.2.1",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.1.0",
