--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.6",
     "@radix-ui/react-icons": "^1.1.1",
     "ariakit": "^2.0.0-next.41",
     "clsx": "^1.2.1",
