--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.6",
+    "@dnd-kit/modifiers": "^6.0.1",
     "@radix-ui/react-icons": "^1.1.1",
     "ariakit": "^2.0.0-next.41",
     "clsx": "^1.2.1",
