--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.1.1",
     "ariakit": "^2.0.0-next.41",
     "clsx": "^1.2.1",
+    "contentlayer": "^0.2.9",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.1.0",
     "date-fns": "^2.29.2",
@@ -21,10 +22,12 @@
     "gray-matter": "^4.0.3",
     "mdx-prism": "^0.3.4",
     "next": "latest",
+    "next-contentlayer": "^0.2.9",
     "next-mdx-remote": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
+    "rss": "^1.2.2",
     "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
