--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mdx-prism": "^0.3.4",
     "next": "latest",
     "next-contentlayer": "^0.2.9",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
