--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.0.6",
     "@dnd-kit/modifiers": "^6.0.1",
     "@radix-ui/react-icons": "^1.1.1",
+    "@vercel/og": "^0.0.21",
     "ariakit": "^2.0.0-next.41",
     "clsx": "^1.2.1",
     "contentlayer": "^0.2.9",
