--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
+    "rehype-pretty-code": "^0.6.0",
     "rss": "^1.2.2",
+    "shiki": "^0.12.1",
     "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
