--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ariakit": "^2.0.0-next.41",
     "clsx": "^1.2.1",
     "contentlayer": "^0.2.9",
+    "copy-to-clipboard": "^3.3.3",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.1.0",
     "date-fns": "^2.29.2",
