--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.6",
     "@dnd-kit/modifiers": "^6.0.1",
+    "@next/font": "^13.1.1",
     "@radix-ui/react-icons": "^1.1.1",
     "@vercel/og": "^0.0.21",
     "ariakit": "^2.0.0-next.41",
