--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "rehype-pretty-code": "^0.6.0",
     "rss": "^1.2.2",
     "shiki": "^0.12.1",
-    "tailwind-merge": "^1.8.0"
+    "tailwind-merge": "^1.8.0",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
