--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "scripts": {
     "type-check": "tsc --noEmit --incremental --preserveWatchOutput --pretty",
     "dev": "export NODE_ENV=dev && concurrently -n NEXT,TS -c magenta,cyan \"next dev\" \"yarn type-check --watch\"",
-    "build": "next build",
+    "rss": "node scripts/rss.mjs",
+    "sitemap": "node scripts/sitemap.mjs",
+    "build": "next build && yarn postbuild",
     "start": "next start",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx --ext js"
+    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "postbuild": "yarn sitemap && yarn rss"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.6",
@@ -18,8 +21,9 @@
     "clsx": "^1.2.1",
     "contentlayer": "^0.2.9",
     "copy-to-clipboard": "^3.3.3",
-    "date-fns": "^2.29.2",
+    "date-fns": "^2.29.3",
     "framer-motion": "^7.10.2",
+    "globby": "^13.1.3",
     "mdx-prism": "^0.3.4",
     "next": "latest",
     "next-contentlayer": "^0.2.9",
@@ -28,7 +32,6 @@
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.6.0",
-    "rss": "^1.2.2",
     "shiki": "^0.12.1",
     "tailwind-merge": "^1.8.0",
     "unique-names-generator": "^4.7.1"
@@ -47,6 +50,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "feed": "^4.2.2",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "rehype": "^12.0.1",
