--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postbuild": "yarn sitemap && yarn rss"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^1.18.4",
     "@dnd-kit/core": "^6.0.6",
     "@dnd-kit/modifiers": "^6.0.1",
     "@next/font": "^13.1.1",
