--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use-measure": "^2.1.1",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.6.0",
     "shiki": "^0.12.1",
