fix: fix design + clean ups
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["*"],
-      "@/contentlayer/*": [".contentlayer/*"]
+      "@/contentlayer/*": [".contentlayer/*"],
+      "@/widgets/*": ["./components/mdx/widgets/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
