--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "date-fns": "^2.29.3",
     "framer-motion": "^7.10.2",
     "globby": "^13.1.3",
+    "lucide-react": "^0.112.0",
     "mdx-prism": "^0.3.4",
     "next": "latest",
     "next-contentlayer": "^0.2.9",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-hotkeys-hook": "^4.3.5",
     "react-responsive": "^9.0.2",
     "react-use-measure": "^2.1.1",
     "reading-time": "^1.5.0",
