feat: add new layout for experiments
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,16 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["*"],
-      "@/contentlayer/*": [".contentlayer/*"],
+
+      "@/contentlayer/*": ["./.contentlayer/generated"],
       "@/widgets/*": ["./components/mdx/widgets/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".contentlayer/generated"
+  ],
   "exclude": ["node_modules"]
 }
