--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@next/font": "^13.1.1",
     "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.0.3",
     "@vercel/og": "^0.0.21",
     "ariakit": "^2.0.0-next.42",
     "clsx": "^1.2.1",
@@ -34,13 +35,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
-    "react-hotkeys-hook": "^4.3.5",
+    "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "react-use-measure": "^2.1.1",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.6.0",
     "shiki": "^0.12.1",
     "tailwind-merge": "^1.8.0",
+    "tailwindcss-radix": "^2.7.0",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
@@ -67,6 +69,7 @@
     "rehype-slug": "5.0.1",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.2.1",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "4.8.4"
   }
 }
