--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".contentlayer/generated"
+    "./.contentlayer/generated"
   ],
   "exclude": ["node_modules"]
 }
