--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/font": "^13.1.1",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.0.3",
+    "@splitbee/web": "^0.3.0",
     "@vercel/og": "^0.0.21",
     "ariakit": "^2.0.0-next.42",
     "clsx": "^1.2.1",
