--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "scripts": {
     "type-check": "tsc --noEmit --incremental --preserveWatchOutput --pretty",
     "dev": "export NODE_ENV=dev && concurrently -n NEXT,TS -c magenta,cyan \"next dev\" \"yarn type-check --watch\"",
-    "rss": "node scripts/rss.mjs",
-    "sitemap": "node scripts/sitemap.mjs",
     "build": "next build",
     "start": "next start",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx --ext js",
-    "postbuild": "pnpm sitemap && yarn rss"
+    "lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^1.18.4",
@@ -55,6 +52,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/rss": "^0.0.30",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "autoprefixer": "^10.4.12",
@@ -64,7 +62,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "feed": "^4.2.2",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "rehype": "^12.0.1",
@@ -73,6 +70,7 @@
     "rehype-prism-plus": "^1.5.0",
     "rehype-slug": "5.0.1",
     "remark-gfm": "^3.0.1",
+    "rss": "^1.2.2",
     "tailwindcss": "^3.2.1",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "4.8.4"
