--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "feed": "^4.2.2",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "rehype": "^12.0.1",
