--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,8 @@
     "import/no-anonymous-default-export": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "react/no-unescaped-entities": "off"
 
     // "no-console": "warn"
   }
