fix: clean up experiments
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@/*": ["*"],
       "@/contentlayer/*": ["./.contentlayer/generated"],
-      "@/widgets/*": ["./components/posts/widgets/*"]
+      "@/widgets/*": ["./components/posts/widgets/*"],
+      "@/experiments/*": ["./components/experiments/widgets/*"]
     }
   },
   "include": [
