--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.9",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
