--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "dependencies": {
-    "@codesandbox/sandpack-react": "^1.18.4",
-    "@dnd-kit/core": "^6.0.7",
+    "@codesandbox/sandpack-react": "^1.20.9",
+    "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
-    "@radix-ui/react-icons": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@splitbee/web": "^0.3.0",
     "@vercel/og": "^0.0.21",
-    "ariakit": "^2.0.0-next.42",
+    "ariakit": "2.0.0-next.44",
     "clsx": "^1.2.1",
     "contentlayer": "^0.2.9",
     "copy-to-clipboard": "^3.3.3",
-    "date-fns": "^2.29.3",
-    "fp-ts": "^2.13.1",
-    "framer-motion": "^7.10.2",
-    "globby": "^13.1.3",
+    "date-fns": "^2.30.0",
+    "fp-ts": "^2.16.1",
+    "framer-motion": "^7.10.3",
+    "globby": "^13.2.2",
     "is-hotkey": "^0.2.0",
     "lucide-react": "^0.112.0",
     "markdown-wasm": "^1.2.0",
@@ -35,45 +35,46 @@
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^4.0.9",
-    "react-hook-form": "^7.43.1",
-    "react-icons": "^4.7.1",
+    "react-error-boundary": "^4.0.11",
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-responsive": "^9.0.2",
     "react-use-measure": "^2.1.1",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.6.0",
     "shiki": "^0.12.1",
-    "tailwind-merge": "^1.8.0",
-    "tailwindcss-radix": "^2.7.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-radix": "^2.8.0",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/rss": "^0.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "autoprefixer": "^10.4.12",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.16",
     "concurrently": "^7.6.0",
-    "eslint": "^8.23.1",
-    "eslint-config-next": "^13.0.7",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.31.8",
+    "esbuild": "^0.12.1\n",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "feed": "^4.2.2",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
+    "postcss": "^8.4.31",
+    "prettier": "^2.8.8",
     "rehype": "^12.0.1",
     "rehype-autolink-headings": "6.1.1",
     "rehype-code-titles": "1.1.0",
-    "rehype-prism-plus": "^1.5.0",
+    "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "5.0.1",
     "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "4.8.4"
   }
 }
