--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@vercel/analytics": "^1.1.1",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "copy-to-clipboard": "^3.3.3",
@@ -36,7 +37,6 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "eslint-plugin-simple-import-sort": "^10.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -44,6 +44,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
